--- a/style.css
+++ b/style.css
@@ -3,3 +3,23 @@
     padding: 0;
     box-sizing: border-box;
 }
+.img-container-logo {
+    width: 150px;
+    height: auto;
+}
+img {
+    width: 100%;
+}
+.navbar {
+    background-color: #000;
+    color: #fff;
+}
+.fab, .fas {
+     color: #fff;
+     font-size: 30px;
+}
+.navbar-nav{
+    background-color: #eac13d;
+    display: block;
+
+}
