--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@
     width: 150px;
     height: auto;
 }
-img {
+.img-container-logo img {
     width: 100%;
 }
 .navbar {
     background-color: #000;
     color: #fff;
     padding: 0;
-    box-shadow: 1px 1px 5px 0px rgb(67, 67, 67);
+    box-shadow: 1px 1px 5px 0px rgb(19, 19, 19);
 }
 .fab, .fas {
      color: #fff;
@@ -36,7 +36,15 @@ img {
     color: black;
     font-weight: 500;
 }
-.carousel-inner img {
+.carousel-item {
+    height: 80vh;
+    object-fit: cover;
+}
+.carousel-inner img{
     width: 100%;
     height: 100%;
-  }
+}
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.666);
+    
+}
