--- a/style.css
+++ b/style.css
@@ -41,10 +41,11 @@
     object-fit: cover;
 }
 .carousel-inner img{
-    width: 100%;
+    width: 150%;
     height: 100%;
 }
 .carousel-caption {
     background-color: rgba(0, 0, 0, 0.666);
-    
+    padding-top: 180px;
+    padding-bottom: 180px;
 }
